Upgrade peer dependencies

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "canvas": "^1.6.2",
     "canvas-prebuilt": "^1.6.5-prerelease.1",
     "chai": "^3.5.0",
-    "chart.js": "2.6.0",
+    "chart.js": "^2.6.0",
     "cross-env": "^5.0.0",
     "css-loader": "^0.28.5",
     "debug": "^2.4.1",
@@ -62,7 +62,7 @@
     "webpack-dev-server": "^2.7.1"
   },
   "peerDependencies": {
-    "chart.js": "2.6.0",
+    "chart.js": "^2.6.0",
     "react": "^0.14.0 || ^15.0.0 || ^16.0.0-beta || ^16.0.0",
     "react-dom": "^0.14.0 || ^15.0.0 || ^16.0.0-beta || ^16.0.0"
   },
