--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-chartjs-2",
-  "version": "2.6.1",
+  "version": "2.6.3",
   "description": "react-chartjs-2",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -16,7 +16,8 @@
   },
   "dependencies": {
     "lodash": "^4.17.4",
-    "prop-types": "^15.5.8"
+    "prop-types": "^15.5.8",
+    "chart.js": "^2.6.0"
   },
   "devDependencies": {
     "@kadira/storybook": "^2.35.3",
@@ -34,7 +35,6 @@
     "canvas": "^1.6.2",
     "canvas-prebuilt": "^1.6.5-prerelease.1",
     "chai": "^3.5.0",
-    "chart.js": "^2.6.0",
     "cross-env": "^5.0.0",
     "css-loader": "^0.28.5",
     "debug": "^2.4.1",
@@ -62,7 +62,6 @@
     "webpack-dev-server": "^2.7.1"
   },
   "peerDependencies": {
-    "chart.js": "^2.6.0",
     "react": "^0.14.0 || ^15.0.0 || ^16.0.0-beta || ^16.0.0",
     "react-dom": "^0.14.0 || ^15.0.0 || ^16.0.0-beta || ^16.0.0"
   },
