--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0 || ^16.0.0-beta || ^16.0.0",
-    "react-dom": "^0.14.0 || ^15.0.0 || ^16.0.0-beta || ^16.0.0"
+    "react-dom": "^0.14.0 || ^15.0.0 || ^16.0.0-beta || ^16.0.0",
+    "chart.js": "^2.6.0"
   },
   "browserify-shim": {
     "react": "global:React",
